--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
-*.scc
 .DS_Store
 node_modules/
 dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-chint-Vue-Mobile/unit/coverage
-chint-Vue-Mobile/e2e/reports
+test/unit/coverage
+test/e2e/reports
 selenium-debug.log
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
