--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
+    "mint-ui": "^2.2.7",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
     "vux": "^2.5.2"
@@ -51,6 +52,8 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.30",
     "karma-webpack": "^2.0.2",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
     "nightwatch": "^0.9.12",
